force-app/main/default/objects/Cancellation_Survey__c/Cancellation_Survey__c.object-meta.xml
<CustomObject>
    <label>Cancellation Survey</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Cancellation Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cancellation Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>