force-app/main/default/objects/Cancellation_Survey__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <formula>Booking__r.Primary_Applicant_Name__c</formula>
    <label>Applicant Name</label>
    <type>Text</type>
</CustomField>