force-app/main/default/objects/Cancellation_Survey__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Cancellation Survey</relationshipLabel>
    <relationshipName>Cancellation_Survey</relationshipName>
    <type>Lookup</type>
</CustomField>