force-app/main/default/objects/Cancellation_Survey__c/fields/Configuration_or_Project__c.field-meta.xml
<CustomField>
    <fullName>Configuration_or_Project__c</fullName>
    <label>Configuration or Project</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lower Configuration</fullName>
            </value>
            <value>
                <fullName>Smaller ticket size</fullName>
            </value>
            <value>
                <fullName>Different stage of construction</fullName>
            </value>
            <value>
                <fullName>Alternate project with different ticket size</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>