force-app/main/default/objects/Cancellation_Survey__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cancellation Survey</relationshipLabel>
    <relationshipName>Cancellation_Survey</relationshipName>
    <type>Lookup</type>
</CustomField>