force-app/main/default/objects/Cancellation_Survey__c/fields/Other_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Cancellation_Reason__c</fullName>
    <label>Other Cancellation Reason</label>
    <type>TextArea</type>
</CustomField>