force-app/main/default/objects/Cancellation_Survey__c/fields/Other_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Other_Feedback__c</fullName>
    <label>Other Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>