force-app/main/default/objects/Cancellation_Survey__c/fields/Other_Reason_Configuration_or_Project__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason_Configuration_or_Project__c</fullName>
    <label>Other Reason Configuration or Project</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>