force-app/main/default/objects/Cancellation_Survey__c/fields/Other_Reason_Payment_Structure__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason_Payment_Structure__c</fullName>
    <label>Other Reason Payment Structure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>