force-app/main/default/objects/Cancellation_Survey__c/fields/Payment_Structure__c.field-meta.xml
<CustomField>
    <fullName>Payment_Structure__c</fullName>
    <label>Payment Structure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deferred Payment Plan</fullName>
            </value>
            <value>
                <fullName>Subvention Scheme</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>