force-app/main/default/objects/Cancellation_Survey__c/fields/Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cancellation__c</fullName>
    <label>Reason for Cancellation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan Eligibility</fullName>
            </value>
            <value>
                <fullName>Medical Exigency</fullName>
            </value>
            <value>
                <fullName>Change of mind</fullName>
            </value>
            <value>
                <fullName>Higher Rate</fullName>
            </value>
            <value>
                <fullName>Your experience with Team members</fullName>
            </value>
            <value>
                <fullName>Deliverable Timelines</fullName>
            </value>
            <value>
                <fullName>Product specification</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>