force-app/main/default/objects/Cancellation_Survey__c/fields/Recommend_to_Anyone__c.field-meta.xml
<CustomField>
    <fullName>Recommend_to_Anyone__c</fullName>
    <label>Recommend to Anyone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>