force-app/main/default/objects/Cancellation_Survey__c/fields/Sales_Team_Booking_process__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_Booking_process__c</fullName>
    <label>Sales Team &amp; Booking process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>