force-app/main/default/objects/Cancellation_Survey__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Applicant_Name__c</columns>
    <columns>Applicant_Email__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Booking__c</columns>
    <columns>Reason_for_Cancellation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>